--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {},
   "type": "module",
   "dependencies": {
-    "tiny-invariant": "^1.2.0",
-    "keccak256": "^1.0.6"
+    "keccak256": "^1.0.6",
+    "sha3": "^2.1.4",
+    "tiny-invariant": "^1.2.0"
   },
   "repository": "git@github.com:Apocentre/merkletree-js"
 }
